--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,24 +1,41 @@
-name: Deploy Firebase posts as static HTML
+name: Generate Static Posts
+
 on:
   push:
-    branches: [main]
+    branches:
+      - main
 
 jobs:
-  build-and-deploy:
+  generate-and-push:
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v3
-    - name: Setup Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: 20
-    - run: npm install node-fetch@2
-    - run: node generate-posts.js
-    - name: Commit generated files
-      run: |
-        git config user.name "github-actions"
-        git config user.email "actions@github.com"
-        git add generated/*
-        git commit -m "Auto-generate posts HTML" || echo "No changes"
-        git push origin main
-        
+      # Checkout repo và giữ credentials để push lại
+      - name: Checkout repository
+        uses: actions/checkout@v3
+        with:
+          persist-credentials: true  # ✅ Giữ token mặc định cho push
+
+      # Cài Node.js
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20
+
+      # Cài node-fetch
+      - name: Install dependencies
+        run: npm install node-fetch@2
+
+      # Chạy script generate-posts.js để tạo HTML tĩnh
+      - name: Generate posts HTML
+        run: node generate-posts.js
+
+      # Commit + push các file generated
+      - name: Commit and push generated files
+        run: |
+          git config user.name "github-actions"
+          git config user.email "actions@github.com"
+          git add generated/
+          git commit -m "Auto-generate posts HTML" || echo "No changes"
+          git push
+          
